refactor(tasks): own the worker pool in PipelineTask and cut the counter boilerplate